changes in Educations section

--- a/index.html
+++ b/index.html
@@ -192,98 +192,53 @@
 
 
 
-  <!-- ======= Education Section ======= -->
-  <section id="education" class="services">
-    <div class="container">
-      <div class="section-title">
-        <h2>Education</h2>
-      </div>
-      <div class="row">
-        <div class="col-lg-12" data-aos="fade-up" style="display: inline-block;">
-
-
-            <div class="col-md-4 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100" style="padding:0px 0px;padding-bottom: 5px;display: inline-block;">
-              <img src="assets\img\education\GT.png" class="img-fluid" alt="">
-              <!-- <h4 style="text-align:left;"><a href="https://www.gatech.edu/" target="_blank" style="color:#12d640">Arizona State University</a><br> </h4> -->
-              <p style="text-align:left;color:#fff;padding: 5px 10px;"><em>MS in Computer Science</em></p>
-              <h5 style="text-align:left;padding: 0px 10px;">August 2023 - Present</h5>
-              <h6 style="text-align:left;color:#fff;padding: 0px 10px;">Relevant Coursework</h6>
-              <ul style="text-align:left;color:#fff;">
-                <li>Database System Implementation</li>
-                <li>Computer Networks</li>
-                <li>MObile Application and Services</li>
-              </ul>
-            </div>
-            <div class="col-md-4 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100" style="padding:0px 0px;padding-bottom: 5px;display: inline-block;">
-              <img src="assets\img\education\bmsce.jpg" class="img-fluid" alt="">
-              <!-- <h4 style="text-align:left;"><a href="https://www.bmsce.ac.in/" target="_blank" style="color:#12d640">Ahmedabad University</a><br> </h4> -->
-              <p style="text-align:left;color:#fff;padding: 5px 10px;"><em>B.E in Information Science and Engineering</em></p>
-              <h5 style="text-align:left;padding: 0px 10px;">August 2017 - July 2021</h5>
-              <h6 style="text-align:left;color:#fff;padding: 0px 10px;">Relevant Coursework</h6>
-              <ul style="text-align:left;color:#fff;">
-                <!-- <li>Data Structures &amp; Algorithms</li> -->
-                <li>Database Management Systems</li>
-                <!-- <li>Operating Systems</li> -->
-                <li>Operating Systems</li>
-                <li>Machine Learning</li>
-                <!-- <li>Computer Vision</li> -->
-              </ul>
-            </div>
-          </div>
-        </div>
-      </div>
-
-
-   <!-- ======= Certifications Section ======= -->
-<section id="certifications" class="services">
+ <!-- ======= Education Section ======= -->
+<section id="education" class="services bg-dark text-white py-5">
   <div class="container">
     <div class="section-title">
-      <h2>Certifications</h2>
+      <h2>Education</h2>
     </div>
     <div class="row">
-      <!-- Oracle Cloud Infrastructure Foundations 2021 Certified Associate -->
-      <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-        <div class="portfolio-wrap">
-          <img src="assets\img\certification\OCI foundations ss.png" class="img-fluid" alt="">
-          <div class="portfolio-info">
-            <h4>Oracle Cloud Infrastructure Foundations 2021 Certified Associate</h4>
-            <div class="portfolio-links">
-              <a href="assets\img\certification\architect assoc.png" target="_blank" title="Certificate"><i class="bx bx-link"></i></a>
-            </div>
-          </div>
+      <div class="col-md-6 col-lg-4 mb-4" data-aos="fade-up" data-aos-delay="100">
+        <div class="icon-box bg-light text-dark p-4 h-100">
+          <img src="assets/img/education/GT.png" class="img-fluid" alt="GT Logo">
+          <h4 class="font-weight-bold"><em>MS in Computer Science</em></h4>
+          <p>August 2023 - Present</p>
+          <h6>Relevant Coursework</h6>
+          <ul>
+            <li>Database System Implementation</li>
+            <li>Computer Networks</li>
+            <li>Mobile Application and Services</li>
+          </ul>
         </div>
       </div>
-      <!-- Oracle Cloud Infrastructure 2021 Certified Architect Associate -->
-      <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-        <div class="portfolio-wrap">
-          <img src="assets/img/certification/oci-architect-2021.jpg" class="img-fluid" alt="">
-          <div class="portfolio-info">
-            <h4>Oracle Cloud Infrastructure 2021 Certified Architect Associate</h4>
-            <div class="portfolio-links">
-              <a href="assets\img\certification\data mgmt.png" target="_blank" title="Certificate"><i class="bx bx-link"></i></a>
-            </div>
-          </div>
+      <div class="col-md-6 col-lg-4 mb-4" data-aos="fade-up" data-aos-delay="100">
+        <div class="icon-box bg-light text-dark p-4 h-100">
+          <img src="assets/img/education/bmsce.jpg" class="img-fluid" alt="BMSCE Logo">
+          <h4 class="font-weight-bold"><em>B.E in Information Science and Engineering</em></h4>
+          <p>August 2017 - July 2021</p>
+          <h6>Relevant Coursework</h6>
+          <ul>
+            <li>Database Management Systems</li>
+            <li>Operating Systems</li>
+            <li>Machine Learning</li>
+          </ul>
         </div>
       </div>
-      <!-- Oracle Cloud Data Management 2022 Foundations Certified Associate -->
-      <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-        <div class="portfolio-wrap">
-          <img src="assets/img/certification/oci-data-mgmt-2022.jpg" class="img-fluid" alt="">
-          <div class="portfolio-info">
-            <h4>Oracle Cloud Data Management 2022 Foundations Certified Associate</h4>
-            <div class="portfolio-links">
-              <a href="assets/img/certification/oci-data-mgmt-2022.jpg" target="_blank" title="Certificate"><i class="bx bx-link"></i></a>
-            </div>
-          </div>
+      <div class="col-md-6 col-lg-4 mb-4" data-aos="fade-up" data-aos-delay="100">
+        <div class="icon-box bg-light text-dark p-4 h-100">
+          <h4 class="font-weight-bold">Certifications</h4>
+          <ul>
+            <li>Oracle Cloud Infrastructure 2021 Certified Architect Associate</li>
+            <li>Oracle Cloud Data Management 2022 Foundations Certified Associate</li>
+            <li>Oracle Cloud Infrastructure Foundations 2021 Certified Associate</li>
+          </ul>
         </div>
       </div>
     </div>
   </div>
 </section>
-<!-- End Certifications Section -->
-
-  </section>
-  <!-- End Education Section -->
+<!-- End Education Section -->
 
 
 
