modified about section

--- a/index.html
+++ b/index.html
@@ -106,9 +106,7 @@
           <img src="assets\img\profile.JPG" class="img-fluid" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-          <p>Focused and enthusiastic developer with a keen interest in software development and cloud . By comprehensive exposure
-            to the underlying concepts and applying them vividly to various projects, my love for these domains came into being.
-            I am a passionate individual who thrives to build and apply knowledge to solve real-world industry problems.
+          <p>Dedicated and passionate software developer with a strong affinity for software development and cloud technologies. Through extensive exposure to foundational concepts and their dynamic application across diverse projects, my passion for these fields has flourished. I am an avid learner driven by the desire to harness knowledge to tackle real-world industry challenges effectively.
           </p>
           <div class="row">
             <div class="col-lg-6">
