--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
       <div class="row">
           <div class="col-lg-12" data-aos="fade-up">
               <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
-                <h4 style="text-align:left;"><a href="https://www.gatech.edu/" style="color:#12d640">Georgia Tech</a><br> </h4>
+                <h4 style="text-align:left;"><a href="https://www.gatech.edu/" style="color:#12d640">Georgia Institute of Technology</a><br> </h4>
                 <h5 style="text-align:left;">August 2023 - Present</h5>
                 <p style="text-align:left;color:#fff"><em>Student </em></p>
                 <ul style="text-align:left;">
@@ -287,7 +287,7 @@
                 </ul>
               </div>
               <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
-                <h4 style="text-align:left;"><a href="https://www.iitkgp.ac.in/" target="_blank" style="color:#12d640">Indian Institute of Technology</a><br> </h4>
+                <h4 style="text-align:left;"><a href="https://www.iitkgp.ac.in/" target="_blank" style="color:#12d640">Indian Institute of Technology Kharagpur</a><br> </h4>
                 <h5 style="text-align:left;">June 2019 - July 2019</h5>
                 <p style="text-align:left;color:#fff"><em>Data Analyst Intern</em></p>
                 <ul style="text-align:left;">
