Modified Job titles

--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
               <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
                 <h4 style="text-align:left;"><a href="https://www.oracle.com/" style="color:#12d640">Oracle India Private Limited </a><br> </h4>
                 <h5 style="text-align:left;">August 2021 - June 2023</h5>
-                <p style="text-align:left;color:#fff"><em>Software Development Engineer - I</em></p>
+                <p style="text-align:left;color:#fff"><em>Software Development Engineer - I (IC2)</em></p>
                 <ul style="text-align:left;">
                   <li>Engineered a client-side library within Oracle Database 20c, empowering Kafka applications to seamlessly connect
                     to the database, eliminating dependencies on a Kafka cluster, and delivering transparency and ease of use in 
@@ -274,7 +274,7 @@
               <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
                 <h4 style="text-align:left;"><a href="https://www.honeywell.com/us/en" style="color:#12d640">Honeywell International Inc.</a><br> </h4>
                 <h5 style="text-align:left;">July 2019 - Dec 2019</h5>
-                <p style="text-align:left;color:#fff"><em>Intern - Full stack developer</em></p>
+                <p style="text-align:left;color:#fff"><em>Intern - Full Stack Developer</em></p>
                 <ul style="text-align:left;">
                   <li>Led the conceptualization and execution of an Automation Portal, acting as a centralized repository for a wide
                     range of bots employed across Honeywell, optimizing access to essential automation tools, which subsequently led
@@ -289,7 +289,7 @@
               <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
                 <h4 style="text-align:left;"><a href="https://www.iitkgp.ac.in/" target="_blank" style="color:#12d640">Indian Institute of Technology Kharagpur</a><br> </h4>
                 <h5 style="text-align:left;">June 2019 - July 2019</h5>
-                <p style="text-align:left;color:#fff"><em>Data Analyst Intern</em></p>
+                <p style="text-align:left;color:#fff"><em>Intern - Data Analyst </em></p>
                 <ul style="text-align:left;">
                   <li>In a project focused on stock market analysis, I skillfully gathered and preprocessed data from the National Stock Exchange portal, ensuring data integrity and accuracy. Utilizing my expertise in machine learning, I applied advanced algorithms to analyze the data and predict stock returns. To further evaluate the market dynamics, I conducted a two-tailed test to assess information asymmetry in stock returns, providing valuable insights to stakeholders. Through this project, I gained hands-on experience in data collection, preprocessing, machine learning algorithm application, and statistical analysis, demonstrating my proficiency in utilizing data-driven approaches for stock market analysis.</li>
                   <li>Published research findings in a distinguished International Book Chapter hosted by IET London (Institution of Engineering
