--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
       <div class="row">
         <div class="col-lg-4" data-aos="fade-right">
-          <img src="assets\img\profile.JPG" class="img-fluid" alt="">
+          <img src="assets/img/Screenshot_20240130_210448_Instagram.jpg" class="img-fluid" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <p>Dedicated and passionate software developer with a strong affinity for software development and cloud technologies. Through extensive exposure to foundational concepts and their dynamic application across diverse projects, my passion for these fields has flourished. I am an avid learner driven by the desire to harness knowledge to tackle real-world industry challenges effectively.
