--- a/index.html
+++ b/index.html
@@ -227,10 +227,10 @@
         <div class="icon-box bg-light text-dark p-4 h-100">
           <h4 class="font-weight-bold">Certifications</h4>
           <ul>
-            <li>Oracle Cloud Infrastructure 2021 Certified Architect Associate</li>
-            <li>Oracle Cloud Data Management 2022 Foundations Certified Associate</li>
-            <li>Oracle Cloud Infrastructure Foundations 2021 Certified Associate</li>
-          </ul>
+          <li><a href="https://drive.google.com/file/d/1QXajQ2Kw_j5eGuLc84PO_xMIqh7iuJvy/view?usp=sharing" target="_blank">Oracle Cloud Infrastructure 2021 Certified Architect Associate</a></li>
+          <li><a href="https://drive.google.com/file/d/1SNsILaI2xG1LE5c2w2sUxhkfAPCIKb3U/view?usp=sharing" target="_blank">Oracle Cloud Data Management 2022 Foundations Certified Associate</a></li>
+          <li><a href="https://drive.google.com/file/d/1DhUs77JLN4RmXK3wFAFXMXK6ZhOH80Am/view?usp=sharing" target="_blank">Oracle Cloud Infrastructure Foundations 2021 Certified Associate</a></li>
+        </ul>
         </div>
       </div>
     </div>
