--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
   <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script type="text/javascript">
     var typed = new Typed('.typing',{
-      strings: ["a Developer", "a Researcher", "an AI Enthusiast", "a Cloud Geek"],
+      strings: ["a Developer!", "a Researcher!", "an AI Enthusiast!", "a Cloud Geek!"],
       loop: true,
       typeSpeed: 65,
       backSpeed: 65
