--- a/index.html
+++ b/index.html
@@ -414,6 +414,7 @@
                   <img src="https://www.vectorlogo.zone/logos/google_cloud/google_cloud-ar21.svg" alt="vectorlogo.zone">
                   <img src="https://www.vectorlogo.zone/logos/heroku/heroku-ar21.svg" alt="vectorlogo.zone">
                   <img src="https://www.vectorlogo.zone/logos/jupyter/jupyter-ar21.svg" alt="vectorlogo.zone">
+                   <img src="https://www.vectorlogo.zone/logos/sap/sap-icon.svg" alt="vectorlogo.zone">
               </p>
           </div>
         </div>
