--- a/index.html
+++ b/index.html
@@ -415,6 +415,7 @@
                   <img src="https://www.vectorlogo.zone/logos/heroku/heroku-ar21.svg" alt="vectorlogo.zone">
                   <img src="https://www.vectorlogo.zone/logos/jupyter/jupyter-ar21.svg" alt="vectorlogo.zone">
                    <img src="https://www.vectorlogo.zone/logos/sap/sap-icon.svg" alt="vectorlogo.zone">
+                  <img src="https://www.vectorlogo.zone/logos/microsoft_azure/microsoft_azure-ar21.svg" alt="vectorlogo.zone">
               </p>
           </div>
         </div>
