--- a/projects/musicplayer.html
+++ b/projects/musicplayer.html
@@ -1,9 +1,11 @@
-<html lang="en"><head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
   
-    <title>Movie Recommender</title>
-    <meta content="" name="descriptison">
+    <title>Project Summary</title>
+    <meta content="" name="description">
     <meta content="" name="keywords">
   
     <!-- Favicons -->
@@ -11,7 +13,7 @@
     <link href="../assets/img/apple-touch-icon.png" rel="apple-touch-icon">
   
     <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
   
     <!-- Vendor CSS Files -->
     <link href="../assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -23,53 +25,129 @@
   
     <!-- Template Main CSS File -->
     <link href="../assets/css/style.css" rel="stylesheet">
+</head>
   
-    <!-- =======================================================
-    * Template Name: Personal - v2.2.0
-    * Template URL: https://bootstrapmade.com/personal-free-resume-bootstrap-template/
-    * Author: BootstrapMade.com
-    * License: https://bootstrapmade.com/license/
-    ======================================================== -->
-  </head>
-  
-  <body data-gr-c-s-loaded="true">
-  
-  <!-- ======= Portfolio Details ======= -->
+<body>
+
+    <!-- ======= Portfolio Details ======= -->
     <main id="main">
-      <div id="portfolio-details" class="portfolio-details">
-        <div class="container">
-  
-          <div class="row">
-  
-            <div class="col-lg-12 portfolio-info">
-              <br>
-              <h2 style="color:#12d640">Analysis of Data Transfer and Encryption over Tor Based peer-to-peer Connection versus Generic HTTPS and
-                Configuring an HTTP Load Balancer with Auto Scaling</h2>
-              </br>
-              <ul>
-                <li><strong>Tech Stack</strong>: Python, Nexmo, Node.js, Tor, Google Cloud Platform</li>
-                
-              </ul>
-  
-              <ul>
-                <li>Enhanced data transfer security by leveraging Python socket programming to bridge the gap between Tor and
-                HTTPS, resulting in the implementation of 'torpy' and a Nexmo-integrated application for encrypted text
-                communication within a Node.js environment. </li> 
-                <li>Orchestrated HTTP load balancing with auto-scaling by configuring two managed instance groups as backends in US
-                Central-1 and Europe West-1, complemented by the creation of a load balancer for VMs to showcase the
-                capabilities of global load balancing and auto-scaling within the Google Cloud Platform.</li>
-                              
-              </ul>
+        <div id="portfolio-details" class="portfolio-details">
+            <div class="container">
+
+                <div class="row">
+                    <div class="col-lg-12 portfolio-info">
+                        <br>
+                        <h2 style="color:#12d640">Analysis of Data Transfer and Encryption over Tor-Based Peer-to-Peer Connection versus Generic HTTPS and Configuring an HTTP Load Balancer with Auto Scaling</h2>
+                        <ul>
+                            <li><strong>Tech Stack</strong>: Python, Nexmo, Node.js, Tor, Google Cloud Platform</li>
+                        </ul>
+                        <ul>
+                            <li>Enhanced data transfer security by leveraging Python socket programming to bridge the gap between Tor and HTTPS, resulting in the implementation of 'torpy' and a Nexmo-integrated application for encrypted text communication within a Node.js environment.</li> 
+                            <li>Orchestrated HTTP load balancing with auto-scaling by configuring two managed instance groups as backends in US Central-1 and Europe West-1, complemented by the creation of a load balancer for VMs to showcase the capabilities of global load balancing and auto-scaling within the Google Cloud Platform.</li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-lg-12 portfolio-info">
+                        <br>
+                        <h2 style="color:#12d640">Navigating Digital Battlefield During Russia-Ukraine Conflict - Project under Professor Nadiya Kostyuk, School of Public Policy and Cybersecurity Georgia Tech </h2>
+                        <h3>Data Collection:</h3>
+                        <ul>
+                            <li>I used RIPE RIS historical routing data, focusing on RIBs dumped every 8 hours.</li>
+                            <li>I selected three RIPE RIS route collectors in Amsterdam (RRC00), Moscow (RRC13), and Bucharest (RRC22).</li>
+                            <li>I chose Moscow and Bucharest collectors for their proximity to Ukraine and local data collection, and Amsterdam for its global data collection due to its multihop nature.</li>
+                        </ul>
+
+                        <h3>Network Prefix Identification:</h3>
+                        <ul>
+                            <li>I identified network prefixes in Ukraine and Russia using the RIPE IP address allocations database.</li>
+                            <li>I converted IPv4 address ranges to CIDR format for analysis.</li>
+                        </ul>
+
+                        <h3>BGP UPDATE Message Analysis:</h3>
+                        <ul>
+                            <li>I compared frequencies of BGP UPDATE messages for Ukrainian and Russian network prefixes from February 1 to April 30.</li>
+                            <li>I conducted a detailed hourly analysis from February 23 to 28, noting significant peaks before the war's official start.</li>
+                        </ul>
+
+                        <h3>Geolocation and Heat Map:</h3>
+                        <ul>
+                            <li>I used MaxMind GeoIP2 database for geolocating IP addresses.</li>
+                            <li>I plotted heat maps of BGP UPDATE message frequencies to visualize affected areas.</li>
+                        </ul>
+
+                        <h3>Prefix Origin AS Changes:</h3>
+                        <ul>
+                            <li>I analyzed changes in origin ASes for prefixes on a daily basis, noting rare events and unusual peaks.</li>
+                            <li>I focused on prefixes in Ukraine, Russia, and Italy, examining the number of unique ASes leading to them.</li>
+                        </ul>
+
+                        <h3>Path Inflation Analysis:</h3>
+                        <ul>
+                            <li>I compared daily path inflation changes for Russian and Ukrainian IP networks.</li>
+                            <li>I linked path inflation to global attitudes and policies against Russia, noting a continuous increase in path inflation for Russian networks.</li>
+                        </ul>
+
+                        <h3>Impact of Policies and Sanctions:</h3>
+                        <ul>
+                            <li>I discussed how routing policies, economic sanctions, IXP accessibility, and network fragmentation contribute to path inflation.</li>
+                        </ul>
+
+                        <h3>Subnet Announcements:</h3>
+                        <ul>
+                            <li>I monitored daily changes in subnet counts, linking significant increases to potential cyberattacks.</li>
+                        </ul>
+
+                        <h2>Potential Enhancements and Next Steps:</h2>
+
+                        <h3>Extended Time Frame:</h3>
+                        <ul>
+                            <li>I could extend the analysis period to observe longer-term trends and the impact of ongoing geopolitical events.</li>
+                        </ul>
+
+                        <h3>Additional Data Sources:</h3>
+                        <ul>
+                            <li>I could incorporate data from other route collectors or sources to broaden the scope and improve the robustness of my findings.</li>
+                        </ul>
+
+                        <h3>Advanced Geolocation Techniques:</h3>
+                        <ul>
+                            <li>I could explore more advanced geolocation techniques or additional databases to improve the accuracy and granularity of geographic data.</li>
+                        </ul>
+
+                        <h3>Impact Analysis:</h3>
+                        <ul>
+                            <li>I could investigate the specific impact of identified routing anomalies on end-user experience and network performance.</li>
+                        </ul>
+
+                        <h3>Correlation with External Events:</h3>
+                        <ul>
+                            <li>I could correlate BGP UPDATE message patterns and path inflation with specific external events, such as cyberattacks, political decisions, or infrastructure changes.</li>
+                        </ul>
+
+                        <h3>Machine Learning Models:</h3>
+                        <ul>
+                            <li>I could implement machine learning models to predict routing anomalies or path inflation based on historical data and external factors.</li>
+                        </ul>
+
+                        <h3>Visualization Enhancements:</h3>
+                        <ul>
+                            <li>I could develop interactive visualizations or dashboards to make the data more accessible and interpretable for a wider audience.</li>
+                        </ul>
+
+                        <h3>Policy Recommendations:</h3>
+                        <ul>
+                            <li>Based on my findings, I could propose recommendations for network operators and policymakers to mitigate the impact of geopolitical events on internet routing.</li>
+                        </ul>
+                    </div>
+                </div>
             </div>
-  
-          </div>
-  
-        </div>
-      </div><!-- End Portfolio Details -->
+        </div><!-- End Portfolio Details -->
     </main><!-- End #main -->
-  
-   <!-- Vendor JS Files -->
-    <script async="" src="//www.google-analytics.com/analytics.js"></script><script src="assets/vendor/jquery/jquery.min.js"></script>
+
+    <!-- Vendor JS Files -->
+    <script src="../assets/vendor/jquery/jquery.min.js"></script>
     <script src="../assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="../assets/vendor/jquery.easing/jquery.easing.min.js"></script>
     <script src="../assets/vendor/php-email-form/validate.js"></script>
@@ -82,9 +160,5 @@
     <!-- Template Main JS File -->
     <script src="../assets/js/main.js"></script>
   
-    <script>if( window.self == window.top ) { (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){ (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o), m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m) })(window,document,'script','//www.google-analytics.com/analytics.js','ga'); ga('create', 'UA-55234356-4', 'auto'); ga('send', 'pageview'); } </script>
-  
-  </body>
-  </html>
-  
-  
+</body>
+</html>
