Added newer subjects studied in GT

--- a/index.html
+++ b/index.html
@@ -207,6 +207,8 @@
             <li>Database System Implementation</li>
             <li>Computer Networks</li>
             <li>Mobile Application and Services</li>
+            <li>Advanced Internet Computing</li>
+            <li> Special Problems - Research</li>
           </ul>
         </div>
       </div>
