style changes in education section - <i><b><br>

--- a/index.html
+++ b/index.html
@@ -202,8 +202,10 @@
           <img src="assets/img/education/GT.png" class="img-fluid" alt="GT Logo">
           <h4 class="font-weight-bold"><em>MS in Computer Science</em></h4>
           <p>August 2023 - Present</p>
-          <h6>Relevant Coursework</h6>
+          <br>
           <ul>
+          <h6><b><i>Relevant Coursework</i></b></h6>
+          
             <li>Database System Implementation</li>
             <li>Computer Networks</li>
             <li>Mobile Application and Services</li>
@@ -217,8 +219,10 @@
           <img src="assets/img/education/bmsce.jpg" class="img-fluid" alt="BMSCE Logo">
           <h5 class="font-weight-bold"><em>B.E in Information Science and Engineering</em></h5>
           <p>August 2017 - July 2021</p>
-          <h6>Relevant Coursework</h6>
-          <ul>
+          <br>
+           <ul>
+          <h6><b><i>Relevant Coursework</i></b></h6>
+         
             <li>Database Management Systems</li>
             <li>Operating Systems</li>
             <li>Machine Learning</li>
