--- a/index.html
+++ b/index.html
@@ -238,7 +238,8 @@
           <li><a href="https://drive.google.com/file/d/1QXajQ2Kw_j5eGuLc84PO_xMIqh7iuJvy/view?usp=sharing" target="_blank"><span style="color: darkblue;">Oracle Cloud Infrastructure 2021 Certified Architect Associate</a></li>
           <li><a href="https://drive.google.com/file/d/1SNsILaI2xG1LE5c2w2sUxhkfAPCIKb3U/view?usp=sharing" target="_blank"><span style="color: darkblue;">Oracle Cloud Data Management 2022 Foundations Certified Associate</a></li>
           <li><a href="https://drive.google.com/file/d/1DhUs77JLN4RmXK3wFAFXMXK6ZhOH80Am/view?usp=sharing" target="_blank"><span style="color: darkblue;">Oracle Cloud Infrastructure Foundations 2021 Certified Associate</a></li>
-        </ul>
+          <li><a href="https://drive.google.com/file/d/1LOVbOvbm3t6SCTIaCEb9_bRt9JuA0GML/view?usp=sharing" target="_blank"><span style="color: darkblue;">Oracle Cloud Infrastructure 2024 Generative AI Certified Professional</a></li>
+          </ul>
         </div>
       </div>
     </div>
